tests/NormalTests/paczka1/small_fuzzy/63450326.err
Error in line 1: ukCyj6 S138 1,6
Error in line 5: A978 A978 70,1
